Finished factorizer and interest calculator practice problems

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /classwork/HelloWorld/target/
 /classwork/Debugging/target/
 /classwork/PracticeProgramming/target/
+/classwork/Factorizer/target/
+/classwork/InterestCalculator/target/
