Added StateCapitals, Shapes, and Simple Calculator exercises

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /classwork/PracticeProgramming/target/
 /classwork/Factorizer/target/
 /classwork/InterestCalculator/target/
+/classwork/SimpleCalculator/target/
+/classwork/Shapes/target/
+/classwork/StateCapitals/target/
